--- a/example.conf
+++ b/example.conf
@@ -1,11 +1,5 @@
-1 155.98.36.142:50001 155.98.36.142:50002 /tmp/raft_log1 /tmp/testdb1
-2 155.98.36.100:50001 155.98.36.100:50002 /tmp/raft_log1 /tmp/testdb2 
-3 155.98.36.111:50001 155.98.36.111:50002 /tmp/raft_log0 /tmp/testdb0
-4 155.98.36.141:50001 155.98.36.141:50002 /tmp/raft_log1 /tmp/testdb1
-5 155.98.36.57:50001 155.98.36.57:50002 /tmp/raft_log1 /tmp/testdb2 
-6 155.98.36.59:50001 155.98.36.59:50002 /tmp/raft_log0 /tmp/testdb0
-7 155.98.36.151:50001 155.98.36.151:50002 /tmp/raft_log1 /tmp/testdb1
-8 155.98.36.97:50001 155.98.36.97:50002 /tmp/raft_log1 /tmp/testdb2 
-9 155.98.36.60:50011 155.98.36.60:50012 /tmp/raft_log11 /tmp/testdb11
-0 155.98.36.60:50001 155.98.36.60:50002 /tmp/raft_log0 /tmp/testdb0
-1 155.98.36.142:50011 155.98.36.142:50012 /tmp/raft_log11 /tmp/testdb11 
+0 127.0.0.1:50001 127.0.0.1:50002 /Users/rithwikkerur/Documents/UCSB/data/raft_log0 /Users/rithwikkerur/Documents/UCSB/data/testdb0
+1 127.0.0.1:50003 127.0.0.1:50004 /Users/rithwikkerur/Documents/UCSB/data/raft_log1 /Users/rithwikkerur/Documents/UCSB/data/testdb1
+2 127.0.0.1:50005 127.0.0.1:50006 /Users/rithwikkerur/Documents/UCSB/data/raft_log2 /Users/rithwikkerur/Documents/UCSB/data/testdb2
+3 127.0.0.1:50007 127.0.0.1:50008 /Users/rithwikkerur/Documents/UCSB/data/raft_log3 /Users/rithwikkerur/Documents/UCSB/data/testdb3
+4 127.0.0.1:50009 127.0.0.1:50010 /Users/rithwikkerur/Documents/UCSB/data/raft_log4 /Users/rithwikkerur/Documents/UCSB/data/testdb4
