Initial Serializer and LogEntry changes

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -59,4 +59,5 @@ target_link_libraries(readbench_client kv gflags)
 add_executable(follower_recover_bench follower_recover_bench.cc)
 target_link_libraries(follower_recover_bench kv gflags)
 
-
+add_executable(testStorage testStorage.cc)
+target_link_libraries(testStorage raft rcf)
