--- a/example.conf
+++ b/example.conf
@@ -1,11 +1,11 @@
-0 155.98.36.60:50001 155.98.36.60:50002 /tmp/raft_log0 /tmp/testdb0
-1 155.98.36.142:50001 155.98.36.142:50002 /tmp/raft_log1 /tmp/testdb1
-2 155.98.36.100:50001 155.98.36.100:50002 /tmp/raft_log1 /tmp/testdb2 
-3 155.98.36.111:50001 155.98.36.111:50002 /tmp/raft_log0 /tmp/testdb0
-4 155.98.36.141:50001 155.98.36.141:50002 /tmp/raft_log1 /tmp/testdb1
-5 155.98.36.57:50001 155.98.36.57:50002 /tmp/raft_log1 /tmp/testdb2 
-6 155.98.36.59:50001 155.98.36.59:50002 /tmp/raft_log0 /tmp/testdb0
-7 155.98.36.151:50001 155.98.36.151:50002 /tmp/raft_log1 /tmp/testdb1
-8 155.98.36.97:50001 155.98.36.97:50002 /tmp/raft_log1 /tmp/testdb2 
-9 155.98.36.60:50011 155.98.36.60:50012 /tmp/raft_log11 /tmp/testdb11
-10 155.98.36.142:50011 155.98.36.142:50012 /tmp/raft_log11 /tmp/testdb11 
+0 127.0.0.1:50001 127.0.0.1:50002 ./experiments/raft_log0 ./experiments/testdb0
+1 127.0.0.1:50003 127.0.0.1:50004 ./experiments/raft_log1 ./experiments/testdb1
+2 127.0.0.1:50005 127.0.0.1:50006 ./experiments/raft_log2 ./experiments/testdb2
+3 127.0.0.1:50007 127.0.0.1:50008 ./experiments/raft_log3 ./experiments/testdb3
+4 127.0.0.1:50009 127.0.0.1:50010 ./experiments/raft_log4 ./experiments/testdb4
+5 127.0.0.1:50011 127.0.0.1:50012 ./experiments/raft_log5 ./experiments/testdb5
+6 127.0.0.1:50013 127.0.0.1:50014 ./experiments/raft_log6 ./experiments/testdb6
+7 127.0.0.1:50015 127.0.0.1:50016 ./experiments/raft_log7 ./experiments/testdb7
+8 127.0.0.1:50017 127.0.0.1:50018 ./experiments/raft_log8 ./experiments/testdb8
+9 127.0.0.1:50019 127.0.0.1:50020 ./experiments/raft_log9 ./experiments/testdb9
+10 127.0.0.1:50021 127.0.0.1:50022 ./experiments/raft_log10 ./experiments/testdb10
