--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,15 @@ project(raft)
 
 set(CMAKE_CXX_STANDARD 17)
 
+message(STATUS "AddressSanitizer ENABLED")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer -g")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fsanitize=address -fno-omit-frame-pointer -g")
+set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -fsanitize=address")
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -fsanitize=address")
+
+# Disable RocksDB tracing features to avoid null handler issues
+add_compile_definitions(ROCKSDB_LITE)
+
 if(${LOG} STREQUAL on)
   add_compile_definitions(ENABLE_LOG)
 endif()
